--- a/src/app/components/global/globals.scss
+++ b/src/app/components/global/globals.scss
@@ -24,9 +24,26 @@ body {
   margin: 0;
 }
 
-a {
-  color: inherit;
+.cta {
+  display: inline-block;
+  font-family: var(--font-aguila-thin);
+  font-size: 1.6rem;
+  font-weight: 700;
+  letter-spacing: .1rem;
+  text-transform: uppercase;
+  padding: 1.5rem 3rem;
+  color: $white;
+  background-color: $black;
+  border: 1px solid $white;
+  border-radius: 1px;
+  cursor: pointer;
+  transition: background-color 0.3s, color 0.3s;
   text-decoration: none;
+
+  &:hover {
+    background-color: $white;
+    color: $black;
+  }
 }
 
 @media (prefers-color-scheme: dark) {
