--- a/src/app/components/global/_variables.scss
+++ b/src/app/components/global/_variables.scss
@@ -2,4 +2,5 @@ $background: #000;
 $white: #fff;
 $black: #000;
 $placeholder: #000;
-$hamilton-font: 'Hamilton Script', cursive;
+$serif: var(--font-hamilton-script), serif;
+$sansSerif: var(--font-aguila-thin), sans-serif;
