add gallery and new fonts

--- a/src/app/components/dallas-rsvp/dallas-rsvp.module.scss
+++ b/src/app/components/dallas-rsvp/dallas-rsvp.module.scss
@@ -17,6 +17,7 @@
   font-size: 1.6rem;
   margin-bottom: 2rem;
   display: inline-block;
+  letter-spacing: -.2rem;
 
   &:hover {
     text-decoration: underline;
