--- a/src/app/components/gallery/gallery.module.scss
+++ b/src/app/components/gallery/gallery.module.scss
@@ -17,6 +17,7 @@
   font-size: 1.6rem;
   margin-bottom: 2rem;
   display: inline-block;
+  letter-spacing: -.2rem;
 
   &:hover {
     text-decoration: underline;
@@ -72,11 +73,10 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  height: 70%;
-  width: 70%;
+  height: 100%;
+  width: 100%;
   z-index: 0;
   overflow: hidden;
-  background: $black;
 }
 
 .slider {
@@ -93,15 +93,17 @@
 
 .arrow {
   position: absolute;
-  top: 50%;
+  top: 45%;
   color: $black;
   background: none;
   outline: none;
   border: none;
+  height: 65px;
+  width: 65px;
 }
 
 .arrowPrev {
-  left: -50px;
+  left: -100px;
   transform: translateY(-50%);
   font-size: 3rem;
   cursor: pointer;
@@ -109,11 +111,16 @@
 }
 
 .arrowNext {
-  right: -50px;
-  transform: translateY(-50%);
+  right: -100px;
   font-size: 3rem;
   cursor: pointer;
   outline: none;
   z-index: 1;
+  transform: translateY(-50%) scaleX(-1);
+}
+
+.arrowImage {
+  height: 100%;
+  width: 100%;
 }
 
