--- a/src/app/components/global/_variables.scss
+++ b/src/app/components/global/_variables.scss
@@ -3,4 +3,4 @@ $white: #fff;
 $black: #000;
 $placeholder: #000;
 $serif: var(--font-hamilton-script), serif;
-$sansSerif: var(--font-aguila-thin), sans-serif;
+$sansSerif: var(--font-prairie-sans), sans-serif;
