--- a/src/app/components/dallas-rsvp-form/dallas-rsvp-form.module.scss
+++ b/src/app/components/dallas-rsvp-form/dallas-rsvp-form.module.scss
@@ -11,8 +11,9 @@
 
 .legend {
   color: $white;
-  font-size: 2rem;
+  font-size: 1.6rem;
   margin: 2rem 0 1rem;
+  letter-spacing: -.2rem;
 }
 
 .radioInput {
@@ -22,11 +23,12 @@
 .radioLabel {
   display: inline-block;
   color: $white;
-  font-size: 1.6rem;
+  font-size: 1.2rem;
   position: relative;
   transition: background-color 0.2s;
   padding-left: 2.5rem;
   margin-bottom: 1rem;
+  letter-spacing: -.2rem;
 
   &::after {
     transition: background-color 0.2s;
