--- a/src/app/components/global/floating-label-input/floating-label-input.module.scss
+++ b/src/app/components/global/floating-label-input/floating-label-input.module.scss
@@ -31,6 +31,7 @@
     pointer-events: none;
     transition: 0.2s cubic-bezier(0.4,0,0.2,1);
     transform-origin: left top;
+    letter-spacing: -.2rem;
   }
   
 }
