--- a/src/app/components/dallas-rsvp-form/dallas-rsvp-form.module.scss
+++ b/src/app/components/dallas-rsvp-form/dallas-rsvp-form.module.scss
@@ -5,29 +5,48 @@
   margin: 0 auto;
 }
 
+.form,
+.additionalQuestions {
+  display: flex;
+  flex-direction: column;
+  gap: 4rem;
+  width: 100%;
+}
+
 .fieldset {
   border: none;
+  display: flex;
+  flex-direction: column;
+  gap: 1.2rem;
 }
 
 .legend {
   color: $white;
-  font-size: 1.6rem;
-  margin: 2rem 0 1rem;
-  letter-spacing: -.2rem;
+  font-size: 1.2rem;
+  margin-bottom: 1.2rem;
+  letter-spacing: -.1rem;
+  line-height: 1.5;
+
+  @media screen and (min-width: 1024px) {
+    font-size: 1.6rem;
+    
+  }
 }
 
 .radioInput {
   display: none;
+  margin-bottom: 1rem;
 }
 
 .radioLabel {
-  display: inline-block;
+  display: flex;
+  align-items: center;
   color: $white;
   font-size: 1.2rem;
   position: relative;
   transition: background-color 0.2s;
   padding-left: 2.5rem;
-  margin-bottom: 1rem;
+  height: 1.6rem;
   letter-spacing: -.2rem;
 
   &::after {
@@ -66,6 +85,24 @@
   justify-content: center;
   align-items: center;
   margin: 2rem 0 0;
+}
+
+.infoText,
+.infoLink {
+  font-size: 1.2rem;
+  color: $white;
+  text-align: center;
+  margin-bottom: 3rem;
+  letter-spacing: -.1rem;
+  line-height: 1.5;
+
+  @media screen and (min-width: 1024px) {
+    font-size: 1.6rem;
+  }
+}
+
+.infoLink {
+  margin: 0 .5rem 1rem;
 }
 
 .errorMessage {
