--- a/src/app/components/dallas-rsvp/dallas-rsvp.module.scss
+++ b/src/app/components/dallas-rsvp/dallas-rsvp.module.scss
@@ -2,25 +2,13 @@
   position: relative;
   color: $background;
   max-width: 1440px;
-  padding: 12rem 6rem;
+  padding: 6rem 3rem;
   margin: 0 auto;
   letter-spacing: .02rem;
   font-weight: 700;
-}
 
-.backLink {
-  position: absolute;
-  top: 2rem;
-  left: 2rem;
-  color: $white;
-  text-decoration: none;
-  font-size: 1.6rem;
-  margin-bottom: 2rem;
-  display: inline-block;
-  letter-spacing: -.2rem;
-
-  &:hover {
-    text-decoration: underline;
+  @media screen and (min-width: 1024px) {
+    padding: 12rem 6rem;
   }
 }
 
@@ -28,5 +16,10 @@
   color: $white;
   font-size: 6rem;
   text-align: center;
-  margin-bottom: 2rem;
+  margin-bottom: 4rem;
+  letter-spacing: .2rem;
+}
+
+.headerLine {
+  letter-spacing: 1.6rem;
 }
