--- a/src/app/components/global/floating-label-input/floating-label-input.module.scss
+++ b/src/app/components/global/floating-label-input/floating-label-input.module.scss
@@ -1,19 +1,52 @@
 .floatingLabelGroup {
   position: relative;
-  margin-bottom: 2rem;
 
-  input,
-  textarea {
+  input {
+    font-family: $sansSerif;
     font-weight: 700;
     width: 100%;
-    padding: 1.8rem 1rem 1rem;
-    font-size: 1.5rem;
+    padding: 1.4rem 1rem .6rem;
+    font-size: 1.2rem;
+    letter-spacing: -.1rem;
     border-radius: 1px;
     background: white;
     outline: none;
     transition: border-color 0.2s;
     color: $black;
     border: none;
+    line-height: 1.5;
+
+    @media screen and (min-width: 1024px) {
+      font-size: 1.5rem;
+      padding: 1.6rem 1rem .8rem;
+    }
+
+    &:focus + label,
+    &.filled + label {
+      top: 0.5rem;
+      transform: scale(0.65);
+    }
+  }
+
+  textarea {
+    font-family: $sansSerif;
+    font-weight: 700;
+    width: 100%;
+    padding: 2rem 1rem .6rem;
+    font-size: 1.2rem;
+    letter-spacing: -.1rem;
+    border-radius: 1px;
+    background: white;
+    outline: none;
+    transition: border-color 0.2s;
+    color: $black;
+    border: none;
+    line-height: 1.5;
+
+    @media screen and (min-width: 1024px) {
+      font-size: 1.5rem;
+      padding: 2.4rem 1rem .8rem;
+    }
 
     &:focus + label,
     &.filled + label {
@@ -25,13 +58,19 @@
   label {
     position: absolute;
     left: 1rem;
-    top: 1.2rem;
+    top: 1rem;
     color: $placeholder;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     pointer-events: none;
     transition: 0.2s cubic-bezier(0.4,0,0.2,1);
     transform-origin: left top;
-    letter-spacing: -.2rem;
+    letter-spacing: -.1rem;
+    line-height: 1.5;
+
+    @media screen and (min-width: 1024px) {
+      font-size: 1.5rem;
+      top: 1.2rem;
+    }
   }
   
 }
