--- a/src/app/components/global/globals.scss
+++ b/src/app/components/global/globals.scss
@@ -61,14 +61,19 @@ body {
 
 .backLink {
   position: absolute;
-  top: 2rem;
-  left: 2rem;
-  color: $black;
+  top: 1rem;
+  left: 1rem;
   text-decoration: none;
-  font-size: 1.6rem;
+  font-size: 1.2rem;
   margin-bottom: 2rem;
   display: inline-block;
-  letter-spacing: -.2rem;
+  letter-spacing: -.1rem;
+
+  @media screen and (min-width: 1024px) {
+    font-size: 1.6rem;
+    top: 2rem;
+    left: 2rem;
+  }
 
   &:hover {
     text-decoration: underline;
