--- a/src/app/components/home/home.module.scss
+++ b/src/app/components/home/home.module.scss
@@ -1,5 +1,10 @@
 .page {
   min-height: 100svh;
+  padding: 6rem 3rem;
+
+  @media screen and (min-width: 1024px) {
+    padding: 12rem 6rem;
+  }
 }
 
 .main {
@@ -16,6 +21,14 @@
   font-size: 4.8rem;
   text-align: center;
   margin-bottom: 2rem;
+
+  br {
+    display: block;
+
+    @media screen and (min-width: 1024px) {
+      display: none;
+    }
+  }
 }
 
 .subheading {
