--- a/src/app/components/home/home.module.scss
+++ b/src/app/components/home/home.module.scss
@@ -1,6 +1,9 @@
 .page {
   min-height: 100svh;
   padding: 6rem 3rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   @media screen and (min-width: 1024px) {
     padding: 12rem 6rem;
@@ -12,7 +15,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  min-height: 100svh;
   height: 100%;
   width: 100%;
 }
