--- a/src/app/components/gallery/gallery.module.scss
+++ b/src/app/components/gallery/gallery.module.scss
@@ -13,22 +13,6 @@
   }
 }
 
-.backLink {
-  position: absolute;
-  top: 2rem;
-  left: 2rem;
-  color: $black;
-  text-decoration: none;
-  font-size: 1.6rem;
-  margin-bottom: 2rem;
-  display: inline-block;
-  letter-spacing: -.1rem;
-
-  &:hover {
-    text-decoration: underline;
-  }
-}
-
 .backgroundMobile {
   display: block;
   position: absolute;
@@ -63,8 +47,12 @@
   color: $black;
   font-size: 8rem;
   text-align: center;
-  margin-bottom: 4rem;
+  margin-top: 2rem;
   letter-spacing: .2rem;
+
+  @media (min-width: 1024px) {
+    margin-top: 0;
+  }
 }
 
 .frameContainer {
