--- a/src/app/components/global/globals.scss
+++ b/src/app/components/global/globals.scss
@@ -27,11 +27,11 @@ body {
 .cta {
   display: inline-block;
   font-family: $sansSerif;
-  font-size: 1.6rem;
+  font-size: 1.2rem;
   font-weight: 700;
   letter-spacing: .1rem;
   text-transform: uppercase;
-  padding: 1.5rem 3rem;
+  padding: 1rem 2rem;
   color: $white;
   background-color: $black;
   border: 1px solid $white;
@@ -41,9 +41,49 @@ body {
   text-decoration: none;
   letter-spacing: -.1rem;
 
+  @media screen and (min-width: 768px) {
+    font-size: 1.8rem;
+    padding: 1.5rem 3rem;
+  }
+
   &:hover {
     background-color: $white;
     color: $black;
+  }
+
+  &--inverse {
+    color: $black !important;
+    background-color: transparent !important;
+    border: 2px solid $black !important;
+
+    &:hover {
+      background-color: $black !important;
+      color: $white !important;
+    }
+  }
+
+  &--underline {
+    position: relative;
+    border: none !important;
+    padding: 0 !important;
+    color: $black !important;
+    background-color: transparent !important;
+
+    &::after {
+      content: '';
+      display: block;
+      position: absolute;
+      bottom: 0;
+      left: 42px;
+      width: 0;
+      height: 2px;
+      background-color: $black;
+      transition: width 0.5s ease-out;
+    }
+
+    &:hover::after {
+      width: calc(100% - 84px);
+    }
   }
 }
 
