--- a/src/app/components/home/home.module.scss
+++ b/src/app/components/home/home.module.scss
@@ -6,7 +6,7 @@
   align-items: center;
 
   @media screen and (min-width: 1024px) {
-    padding: 12rem 6rem;
+    padding: 8rem 6rem;
   }
 }
 
@@ -20,9 +20,17 @@
 }
 
 .heading {
-  font-size: 4.8rem;
+  font-size: 4rem;
   text-align: center;
   margin-bottom: 2rem;
+
+  @media screen and (min-width: 375px) {
+    font-size: 4.8rem;
+  }
+
+  @media screen and (min-width: 1024px) {
+    font-size: 6.8rem;
+  }
 
   br {
     display: block;
@@ -35,9 +43,17 @@
 
 .subheading {
   font-family: $serif;
-  font-size: 4.2rem;
+  font-size: 3.2rem;
   text-align: center;
   margin-bottom: .5rem;
+
+  @media screen and (min-width: 375px) {
+    font-size: 3.8rem;
+  }
+
+  @media screen and (min-width: 1024px) {
+    font-size: 5.2rem;
+  }
 }
 
 .ctaContainer {
