--- a/src/app/components/home/home.module.scss
+++ b/src/app/components/home/home.module.scss
@@ -1,12 +1,12 @@
 .page {
   min-height: 100svh;
-  padding: 6rem 3rem;
+  padding: 6rem 1.8rem;
   display: flex;
   justify-content: center;
   align-items: center;
 
   @media screen and (min-width: 1024px) {
-    padding: 8rem 6rem;
+    padding: 10rem 6rem 4rem;
   }
 }
 
@@ -28,6 +28,10 @@
     font-size: 4.8rem;
   }
 
+  @media screen and (min-width: 768px) {
+    font-size: 5.6rem;
+  }
+
   @media screen and (min-width: 1024px) {
     font-size: 6.8rem;
   }
@@ -35,7 +39,7 @@
   br {
     display: block;
 
-    @media screen and (min-width: 1024px) {
+    @media screen and (min-width: 768px) {
       display: none;
     }
   }
@@ -48,11 +52,15 @@
   margin-bottom: .5rem;
 
   @media screen and (min-width: 375px) {
+    font-size: 3.4rem;
+  }
+
+  @media screen and (min-width: 768px) {
     font-size: 3.8rem;
   }
 
   @media screen and (min-width: 1024px) {
-    font-size: 5.2rem;
+    font-size: 4.2rem;
   }
 }
 
