--- a/src/app/components/global/globals.scss
+++ b/src/app/components/global/globals.scss
@@ -62,28 +62,12 @@ body {
     }
   }
 
-  &--underline {
-    position: relative;
-    border: none !important;
-    padding: 0 !important;
-    color: $black !important;
-    background-color: transparent !important;
-
-    &::after {
-      content: '';
-      display: block;
-      position: absolute;
-      bottom: 0;
-      left: 42px;
-      width: 0;
-      height: 2px;
-      background-color: $black;
-      transition: width 0.5s ease-out;
-    }
-
-    &:hover::after {
-      width: calc(100% - 84px);
-    }
+  &--serif {
+    font-family: $serif;
+    font-weight: 400;
+    letter-spacing: .2rem;
+    text-transform: none;
+    font-size: 4.2rem;
   }
 }
 
