--- a/src/app/components/registry/registry.module.scss
+++ b/src/app/components/registry/registry.module.scss
@@ -2,7 +2,7 @@
   min-height: 100vh;
   padding: 6rem 0rem;
 
-  @media screen and (min-width: 375px) {
+  @media screen and (min-width: 450px) {
     padding: 6rem 3rem;
   }
 
@@ -53,19 +53,52 @@
   }
 }
 
+.registryCtaWrapper {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
 .registryCta {
   display: inline-flex;
   align-items: center;
   justify-content: center;
   gap: 12px;
-  margin: 0 auto
+  text-decoration: none;
 }
 
-.registrySpade {
-  height: 20px;
-  width: auto;
+.registryCtaText {
+  font-family: $serif;
+  font-weight: 400;
+  letter-spacing: .2rem;
+  text-transform: none;
+  font-size: 2.8rem;
+  color: $black;
+  text-decoration: none;
+  position: relative;
 
-  &--left {
-    transform: scaleX(-1);
+  @media screen and (min-width: 768px) {
+    font-size: 4.2rem;
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background-color: $black;
+  }
+}
+
+.registryCtaDecoration {
+  height: 15px;
+  width: auto;
+  filter: invert(100%);
+  opacity: .9;
+
+  @media screen and (min-width: 768px) {
+    height: 30px;
   }
 }
