--- a/src/app/components/gallery/gallery.module.scss
+++ b/src/app/components/gallery/gallery.module.scss
@@ -1,8 +1,8 @@
 .page {
   position: relative;
   color: $background;
-  height: 100vh;
-  width: 100vw;
+  min-height: 100svh;
+  min-width: 100svw;
   margin: 0 auto;
   letter-spacing: .02rem;
   font-weight: 700;
@@ -18,8 +18,8 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
   z-index: -1;
 
@@ -36,8 +36,8 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
     z-index: -1;
   }
