--- a/src/app/components/registry/registry.module.scss
+++ b/src/app/components/registry/registry.module.scss
@@ -1,5 +1,5 @@
 .page {
-  min-height: 100vh;
+  min-height: 100svh;
   padding: 6rem 0rem;
 
   @media screen and (min-width: 450px) {
@@ -36,6 +36,23 @@
 .envelopeImage {
   width: 100%;
   height: auto;
+}
+
+.crestImage {
+  position: absolute;
+  top: 5%;
+  left: 50%;
+  transform: translateX(-50%);
+  height: 60px;
+  width: auto;
+
+  @media screen and (min-width: 450px) {
+    height: 70px;
+  }
+
+  @media screen and (min-width: 768px) {
+    height: 100px;
+  }
 }
 
 .envelopeText {
