--- a/src/app/styles/floating-label-input.scss
+++ b/src/app/styles/floating-label-input.scss
@@ -1,4 +1,4 @@
-.floatingLabelGroup {
+.floating-label-input {
   position: relative;
 
   input {
@@ -72,5 +72,4 @@
       top: 1.2rem;
     }
   }
-  
 }
