--- a/src/app/styles/gallery.scss
+++ b/src/app/styles/gallery.scss
@@ -1,138 +1,170 @@
- .Gallery {
-   position: relative;
-   color: $background;
-   min-height: 100svh;
-   min-width: 100svw;
-   margin: 0 auto;
-   letter-spacing: .02rem;
-   font-weight: 700;
-   padding: 3rem;
+.Gallery {
+  position: relative;
+  color: $background;
+  min-height: 100svh;
+  min-width: 100svw;
+  margin: 0 auto;
+  letter-spacing: .02rem;
+  font-weight: 700;
+  padding: 3rem;
 
-   @media screen and (min-width: 1024px) {
-     padding: 6rem;
-   }
+  @media screen and (min-width: 1024px) {
+    padding: 6rem;
+  }
 
    &__background-mobile {
-     display: block;
-     position: absolute;
-     top: 0;
-     left: 0;
-     width: 100%;
-     height: 100%;
-     object-fit: cover;
-     z-index: -1;
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
 
-     @media (min-width: 1024px) {
-       display: none;
-     }
-   }
+    @media (min-width: 1024px) {
+      display: none;
+    }
+  }
 
-   &__background-desktop {
-     display: none;
+  &__background-desktop {
+    display: none;
 
-     @media (min-width: 1024px) {
-       display: block;
-       position: absolute;
-       top: 0;
-       left: 0;
-       width: 100%;
-       height: 100%;
-       object-fit: cover;
-       z-index: -1;
-     }
-   }
+    @media (min-width: 1024px) {
+      display: block;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      z-index: -1;
+    }
+  }
 
-   &__header {
-     color: $black;
-     font-size: 8rem;
-     text-align: center;
-     margin-top: 2rem;
-     letter-spacing: .2rem;
+  &__header {
+    color: $black;
+    font-size: 8rem;
+    text-align: center;
+    margin-top: 0rem;
+    letter-spacing: .2rem;
+  }
 
-     @media (min-width: 1024px) {
-       margin-top: 0;
-     }
-   }
+  &__frame-container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
 
-   &__frame-container {
-     position: absolute;
-     top: 50%;
-     left: 50%;
-     transform: translate(-50%, -50%);
-   }
+  &__frame {
+    position: relative;
+    width: auto;
+    height: 60vh;
+    z-index: 1;
+  }
 
-   &__frame {
-     position: relative;
-     width: auto;
-     height: 60vh;
-     z-index: 1;
-   }
+  &__slider-wrapper {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 100%;
+    width: 100%;
+    z-index: 0;
+    overflow: hidden;
+  }
 
-   &__slider-wrapper {
-     position: absolute;
-     top: 50%;
-     left: 50%;
-     transform: translate(-50%, -50%);
-     height: 100%;
-     width: 100%;
-     z-index: 0;
-     overflow: hidden;
-   }
+  &__slider {
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+  }
 
-   &__slider {
-     height: 100%;
-     width: 100%;
-     overflow: hidden;
-   }
+  &__slider-image {
+    width: 100%;
+    height: auto;
+    object-fit: contain;
+  }
 
-   &__slider-image {
-     width: 100%;
-     height: auto;
-     object-fit: contain;
-   }
+  &__arrow {
+    position: absolute;
+    top: 105%;
+    color: $black;
+    background: none;
+    outline: none;
+    border: none;
+    height: auto;
+    width: 30px;
 
-   &__arrow {
-     position: absolute;
-     top: 105%;
-     color: $black;
-     background: none;
-     outline: none;
-     border: none;
-     height: auto;
-     width: 45px;
+    @media screen and (min-width: 768px) {
+      top: 49%;
+      width: 45px;
+    }
 
-     @media screen and (min-width: 768px) {
-       top: 49%;
-     }
+    &--prev {
+      left: calc(50% - 150px);
+      transform: translateY(-50%) scaleX(-1);
+      font-size: 3rem;
+      cursor: pointer;
+      z-index: 1;
 
-     &--prev {
-       left: calc(50% - 80px);
-       transform: translateY(-50%) scaleX(-1);
-       font-size: 3rem;
-       cursor: pointer;
-       z-index: 1;
+      @media screen and (min-width: 768px) {
+        left: -100px;
+      }
+    }
 
-       @media screen and (min-width: 768px) {
-         left: -100px;
-       }
-     }
+    &--next {
+      right: calc(50% - 150px);
+      font-size: 3rem;
+      cursor: pointer;
+      outline: none;
+      z-index: 1;
+      transform: translateY(-50%);
 
-     &--next {
-       right: calc(50% - 80px);
-       font-size: 3rem;
-       cursor: pointer;
-       outline: none;
-       z-index: 1;
-       transform: translateY(-50%);
+      @media screen and (min-width: 768px) {
+        right: -100px;
+      }
+    }
+  }
 
-       @media screen and (min-width: 768px) {
-         right: -100px;
-       }
-     }
-   }
+  &__arrow-image {
+    height: 100%;
+    width: 100%;
+  }
 
-   &__arrow-image {
-     height: 100%;
-     width: 100%;
-   }
- }
+  &__captions-container {
+    position: absolute;
+    bottom: -45px;
+    left: 50%;
+    transform: translateX(-50%);
+    text-align: center;
+    width: 200px;
+    height: 50px;
+
+    @media screen and (min-width: 768px) {
+      bottom: -50px;
+      width: 275px;
+    }
+  }
+
+  &__caption {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 1.2rem;
+    color: $black;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    &.is-active {
+      opacity: 1;
+    }
+  }
+}
