--- a/src/app/styles/information.scss
+++ b/src/app/styles/information.scss
@@ -10,7 +10,6 @@
   &__header {
     font-size: 6rem;
     text-align: center;
-    margin-bottom: 4rem;
     letter-spacing: .2rem;
 
     @media screen and (min-width: 1024px) {
@@ -19,36 +18,19 @@
   }
 
   &__content {
-    max-width: 800px;
+    max-width: 600px;
     margin: 0 auto;
     font-size: 1.2rem;
     line-height: 1.6;
     letter-spacing: -.02rem;
-    text-align: center ;
-  }
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    padding: 6rem 0;
 
-  &__subheader {
-    width: 100%;
-    margin: 4rem auto 1rem;
-    font-size: 1.8rem;
-
-    &:first-child {
-      margin-top: 0;
-    }
-  }
-
-  &__list-header {
-    text-align: center;
-    font-weight: bold;
-    margin-top: 2rem;
-  }
-
-  &__list {
-    text-align: center;
-    list-style: none;
-
-    li {
-      padding-left: 20px;
+    @media screen and (min-width: 1024px) {
+      padding: 8rem 0;
+      gap: 60px;
     }
   }
 }
