update gallery spacing

--- a/src/app/styles/base.scss
+++ b/src/app/styles/base.scss
@@ -103,12 +103,16 @@ button {
   letter-spacing: -.1rem;
   cursor: pointer;
   padding: 1rem;
-  border: .5px solid $white;
+  border: none;
   border-radius: 2px;
   background: $black;
   color: $white;
   z-index: 1;
   transition: background-color .3s ease;
+
+  @media screen and (min-width: 1024px) {
+    border: .5px solid $white;
+  }
 
   &--transparent {
     background: transparent;
