--- a/src/app/styles/home.scss
+++ b/src/app/styles/home.scss
@@ -81,5 +81,9 @@
     margin-top: 3.3rem;
     height: 200px;
     width: auto;
+
+    @media screen and (min-width: 768px) {
+      height: 400px;
+    }
   }
 }
