--- a/src/app/styles/rsvp-form.scss
+++ b/src/app/styles/rsvp-form.scss
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   max-width: 1024px;
-  margin: 0 auto;
+  margin: 0 auto 8rem;
 
   &__container {
     display: flex;
