--- a/src/app/styles/home.scss
+++ b/src/app/styles/home.scss
@@ -83,7 +83,8 @@
     width: auto;
 
     @media screen and (min-width: 768px) {
-      height: 400px;
+      margin-top: 4.8rem;
+      height: 350px;
     }
   }
 }
